--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+:root {
+    --border: 1px solid rgba(255, 255, 255, 0.25);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+    background-color: rgb(12, 12, 12);
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.avatar {
+    margin-right: 1em;
+    height: 48px;
+    border-radius: 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+table button {
+    margin-right: 0.5em;
 }
 
-.App-link {
-  color: #61dafb;
+table button:last-child {
+    margin-right: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal-content {
+    background-color: rgb(12, 12, 12);
+    border: var(--border);
+}
+
+.modal-header {
+    border-bottom: var(--border);
+}
+.modal-footer {
+    border-top: var(--border);
+}
+
+.modal-content input {
+    background-color: rgba(255, 255, 255, 0.8);
 }
